fix : elements out of collapse

--- a/packages/collapse/src/accordion.scss
+++ b/packages/collapse/src/accordion.scss
@@ -66,7 +66,7 @@
     border: solid 1px $color-accordeon-border-collapse;
 
     &--open {
-      max-height: 100vh;
+      max-height: 100%;
       overflow: visible;
     }
   }
